--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="_replyto" required>
 
-            <label for="message">Message:</label>
+            <label for="message">Blabla:</label>
             <textarea id="message" name="message" required></textarea>
 
             <button type="submit">Send</button>
