--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <h1>Contact Us</h1>
-        <form action="https://formspree.io/gastonraraujo@gmail.com" method="POST">
+        <form action="https://formspree.io/f/xqaqeekz" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
