--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </div>
 
         <label for="email">Tu email:</label>
-        <input type="email" id="email" name="_replyto" placeholder="ludy@ejemplo.com" required />
+        <input type="email" id="email" name="email" placeholder="ludy@ejemplo.com" required />
 
         <label for="message1">Déjale un mensaje a Gasty:</label>
-        <textarea id="message1" name="message1" rows="3" placeholder="¡Te amo!"></textarea>
+        <textarea id="message1" name="message1" rows="3" placeholder="Te amoooo"></textarea>
 
-        <label for="message2">Un deseo especial para Gasty:</label>
-        <textarea id="message2" name="message2" rows="3" placeholder="¡Sorpresa!"></textarea>
+        <label for="message2">Cual es la proxima cita que quisieras tener</label>
+        <textarea id="message2" name="message2" rows="3" placeholder=""></textarea>
 
         <button type="submit" class="btn-green">Enviar 💌</button>
       </form>
@@ -142,7 +142,7 @@
         });
         if (!resp.ok) throw new Error();
 
-        result.textContent = '¡Gracias 💖! Revisa tu email.';
+        result.textContent = '¡Gracias 💖! :D';
         result.classList.remove('hidden');
         confetti({ particleCount: 150, spread: 60 });
         form.reset();
